--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header id="home">
         <nav>
-            <h1>Spice</h1>
-            <a href="#">Home</a>
-            <a href="#">Menu</a>
-            <a href="#">Services</a>
-            <a href="#">Gallery</a>
+            <div class="logo">Spice</div>
+            <div class="menu">
+                <a href="#home">Home</a>
+                <a href="#menu">Menu</a>
+                <a href="#services">Services</a>
+                <a href="#offer">Offers</a>
+                <a href="#gallery">Gallery</a>
+            </div>
         </nav>
-    </header>
 </body>
 </html>
