--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
                 <a href="#gallery">Gallery</a>
             </div>
         </nav>
+        <div class="banner" style="background-image: url('meal.png');">
+            <h4>Welcome to Spice Restaurant</h4><br>
+            <h2>HAVE A DELICIOUS <br> MEAL WITH US.</h2>
+        </div>
 </body>
 </html>
