--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         </nav>
         <div class="banner" style="background-image: url('meal.png');">
             <h4>Welcome to Spice Restaurant</h4><br>
-            <h2>HAVE A DELICIOUS <br> MEAL WITH US.</h2>
+            <h2> HAVE A </h2> <h2 class="d"> DELICIOUS </h2> <br> 
+            <h2> MEAL WITH US. </h2>
+            <button class="search-btn">View Our Menu</button>
+            <button class="search-btn">Book a Table</button>
         </div>
 </body>
 </html>
