--- a/index.html
+++ b/index.html
@@ -18,12 +18,28 @@
                 <a href="#gallery">Gallery</a>
             </div>
         </nav>
-        <div class="banner" style="background-image: url('meal.png');">
+            <div class="banner" style="background-image: url('meal.png');">
             <h4>Welcome to Spice Restaurant</h4><br>
             <h2> HAVE A </h2> <h2 class="d"> DELICIOUS </h2>  
             <h2> MEAL WITH US. </h2>
             <button class="search-btn">View Our Menu</button>
             <button class="search-btn">Book a Table</button>
-        </div>
+            </div>    
+    </header>   
+
+    <section class="section1">
+            <div class="pasta">
+                <img src="pasta.jpg" alt="pasta dish" >
+            </div>
+            <div class="text">
+                <h2>Discover your favorite food within our restaurant</h2>
+                <h4>
+                    Whether you're here for a casual bite or a special occasion, our passionate chefs and warm hospitality will make you feel right at home.
+                    At Spice, we believe that great food comes from the heart, and every dish we serve is crafted with care to delight your senses.
+                    <br>
+                    Come savor the magic of spices with us!
+                </h4>
+            </div>
+    </section>
 </body>
 </html>
