--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                     <br>
                     Come savor the magic of spices with us!
                 </h4>
+                <button class="search-btn">Read more</button>
+
             </div>
     </section>
 </body>
