--- a/index.html
+++ b/index.html
@@ -40,8 +40,17 @@
                     Come savor the magic of spices with us!
                 </h4>
                 <button class="search-btn">Read more</button>
-
             </div>
     </section>
+    <section class="special">
+            <h1>Our special items</h1>
+            <div class="image">
+                <img src="burger.jpg" alt="burger" >
+                <img src="dosa.jpg" alt="dosa" >
+                <img src="noodle.jpg" alt="noodle" >
+                <img src="brownie.jpg" alt="brownie" >
+                <img src="keser.jpg" alt="keser" >  
+            </div>
+    </section>    
 </body>
 </html>
