--- a/index.html
+++ b/index.html
@@ -45,11 +45,31 @@
     <section class="special">
             <h1>Our special items</h1>
             <div class="image">
-                <img src="burger.jpg" alt="burger" >
-                <img src="dosa.jpg" alt="dosa" >
-                <img src="noodle.jpg" alt="noodle" >
-                <img src="brownie.jpg" alt="brownie" >
-                <img src="keser.jpg" alt="keser" >  
+                <div class="item">
+                    <img src="burger.jpg" alt="burger">
+                    <h3>Burger</h3>
+                    <p>$5.99</p>
+                </div>
+                <div class="item">
+                    <img src="dosa.jpg" alt="dosa">
+                    <h3>Dosa</h3>
+                    <p>$4.99</p>
+                </div>
+                <div class="item">
+                    <img src="noodle.jpg" alt="noodle">
+                    <h3>Noodles</h3>
+                    <p>$7.49</p>
+                </div>
+                <div class="item">
+                    <img src="brownie.jpg" alt="brownie">
+                    <h3>Brownie</h3>
+                    <p>$3.50</p>
+                </div>
+                <div class="item">
+                    <img src="keser.jpg" alt="keser">
+                    <h3>Kesar Milk</h3>
+                    <p>$6.25</p>
+                </div>
             </div>
     </section>    
 </body>
