--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="menu">
                 <a href="#home">Home</a>
                 <a href="#menu">Menu</a>
-                <a href="#services">Services</a>
+                <a href="#Reservation">Reservation</a>
                 <a href="#offer">Offers</a>
                 <a href="#gallery">Gallery</a>
             </div>
@@ -42,7 +42,9 @@
                 <button class="search-btn">Read more</button>
             </div>
     </section>
-    <section class="special">
+
+    <section id="offer">
+        <div class="special">
             <h1>Our special items</h1>
             <div class="image">
                 <div class="item">
@@ -71,6 +73,7 @@
                     <p>$6.25</p>
                 </div>
             </div>
+        </div>    
     </section>    
 </body>
 </html>
