--- a/Reservation.html
+++ b/Reservation.html
@@ -1,1 +1,21 @@
-<link rel="stylesheet" type="text/css" href="style.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Gallery</title>
+</head>
+<body>
+    <nav>
+        <div class="logo">Spice</div>
+        <div class="menu">
+            <a href="index.html">Home</a>
+            <a href="menu.html">Menu</a>
+            <a href="Reservation.html">Reservation</a>
+            <a href="#offer">Offers</a>
+            <a href="gallery.html">Gallery</a>
+        </div>
+    </nav>
+</body>
+</html>
