--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <div class="logo">Spice</div>
             <div class="menu">
                 <a href="#home">Home</a>
-                <a href="#menu">Menu</a>
-                <a href="#Reservation">Reservation</a>
+                <a href="menu.html">Menu</a>
+                <a href="Reservation.html">Reservation</a>
                 <a href="#offer">Offers</a>
-                <a href="#gallery">Gallery</a>
+                <a href="gallery.html">Gallery</a>
             </div>
         </nav>
             <div class="banner" style="background-image: url('meal.png');">
