--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <div class="banner" style="background-image: url('meal.png');">
             <h4>Welcome to Spice Restaurant</h4><br>
             <h2> HAVE A <strong> DELICIOUS</strong> MEAL WITH US. </h2>
+            <h5>Welcome to Spice, where every meal is a celebration of flavors! Nestled in the heart of the city,<br>
+             we bring together a vibrant fusion of traditional spices and modern culinary techniques to <br> create unforgettable dining experiences.</h5>
             <button class="search-btn">View Our Menu</button>
             <button class="search-btn">Book a Table</button>
             </div>    
