--- a/index.html
+++ b/index.html
@@ -104,17 +104,17 @@
     <section id="contact">
         <div class="main">
             <div class="main1">
-                
+                <h3>Spice</h3>
+                <p>Savor the artistry where every <br> dish is a culinary masterpiece</p>
             </div>
             <div class="main2">
                 
             </div>
             <div class="main3">
-                <ul><h3>Contact Us</h3>
-                    <li>example@gmail.com</li><br>
-                    <li>+64 958 248 966</li><br>
-                    <li>social media</li><br>
-                </ul>
+                <h3>Contact Us</h3>
+                    <p>example@gmail.com</p>
+                    <p>+64 958 248 966</p>
+                    <p>social media</p>
             </div>
         </div>
     </section>
