--- a/index.html
+++ b/index.html
@@ -103,14 +103,25 @@
     </section>
     <section id="contact">
         <div class="main">
-            <div class="main1">
+            <div>
                 <h3>Spice</h3>
                 <p>Savor the artistry where every <br> dish is a culinary masterpiece</p>
             </div>
-            <div class="main2">
-                
+            <div>
+                <h3>Useful links</h3>
+                <p>About us</p>
+                <p>Events</p>
+                <p>Blogs</p>
+                <p>FAQ</p>
             </div>
-            <div class="main3">
+            <div>
+                <h3>Main menu</h3>
+                <p>Home</p>
+                <p>Reservation</p>
+                <p>Offer</p>
+                <p>Gallery</p>
+            </div>
+            <div>
                 <h3>Contact Us</h3>
                     <p>example@gmail.com</p>
                     <p>+64 958 248 966</p>
