--- a/menu.html
+++ b/menu.html
@@ -16,6 +16,95 @@
             <a href="#offer">Offers</a>
             <a href="gallery.html">Gallery</a>
         </div>
-    </nav>
+    </nav>    
+        <section id="offer">
+            <div class="special">
+                <h1>Appetizers</h1>
+                <div class="image">
+                    <div class="item">
+                        <img src="burger.jpg" alt="burger">
+                        <h3>Burger</h3>
+                        <p>$5.99</p>
+                    </div>
+                    <div class="item">
+                        <img src="dosa.jpg" alt="dosa">
+                        <h3>Dosa</h3>
+                        <p>$4.99</p>
+                    </div>
+                    <div class="item">
+                        <img src="noodle.jpg" alt="noodle">
+                        <h3>Noodles</h3>
+                        <p>$7.49</p>
+                    </div>
+                </div>
+            </div>    
+        </section> 
+        <section id="offer">
+            <div class="special">
+                <h1>Main Course</h1>
+                <div class="image">
+                    <div class="item">
+                        <img src="burger.jpg" alt="burger">
+                        <h3>Burger</h3>
+                        <p>$5.99</p>
+                    </div>
+                    <div class="item">
+                        <img src="dosa.jpg" alt="dosa">
+                        <h3>Dosa</h3>
+                        <p>$4.99</p>
+                    </div>
+                    <div class="item">
+                        <img src="noodle.jpg" alt="noodle">
+                        <h3>Noodles</h3>
+                        <p>$7.49</p>
+                    </div>
+                </div>
+            </div>    
+        </section> 
+        <section id="offer">
+            <div class="special">
+                <h1>Deserts</h1>
+                <div class="image">
+                    <div class="item">
+                        <img src="burger.jpg" alt="burger">
+                        <h3>Burger</h3>
+                        <p>$5.99</p>
+                    </div>
+                    <div class="item">
+                        <img src="dosa.jpg" alt="dosa">
+                        <h3>Dosa</h3>
+                        <p>$4.99</p>
+                    </div>
+                    <div class="item">
+                        <img src="noodle.jpg" alt="noodle">
+                        <h3>Noodles</h3>
+                        <p>$7.49</p>
+                    </div>
+                </div>
+            </div>    
+        </section> 
+        <section >
+            <div class="special">
+                <h1>Beverages</h1>
+                <div class="image">
+                    <div class="item">
+                        <img src="burger.jpg" alt="burger">
+                        <h3>Burger</h3>
+                        <p>$5.99</p>
+                    </div>
+                    <div class="item">
+                        <img src="dosa.jpg" alt="dosa">
+                        <h3>Dosa</h3>
+                        <p>$4.99</p>
+                    </div>
+                    <div class="item">
+                        <img src="noodle.jpg" alt="noodle">
+                        <h3>Noodles</h3>
+                        <p>$7.49</p>
+                    </div>
+                </div>
+            </div>    
+        </section> 
+   
 </body>
 </html>
