--- a/menu.html
+++ b/menu.html
@@ -36,6 +36,16 @@
                         <h3>Noodles</h3>
                         <p>$7.49</p>
                     </div>
+                    <div class="item">
+                        <img src="brownie.jpg" alt="brownie">
+                        <h3>Brownie</h3>
+                        <p>$3.50</p>
+                    </div>
+                    <div class="item">
+                        <img src="keser.jpg" alt="keser">
+                        <h3>Kesar Milk</h3>
+                        <p>$6.25</p>
+                    </div>
                 </div>
             </div>    
         </section> 
@@ -57,6 +67,16 @@
                         <img src="noodle.jpg" alt="noodle">
                         <h3>Noodles</h3>
                         <p>$7.49</p>
+                    </div>
+                    <div class="item">
+                        <img src="brownie.jpg" alt="brownie">
+                        <h3>Brownie</h3>
+                        <p>$3.50</p>
+                    </div>
+                    <div class="item">
+                        <img src="keser.jpg" alt="keser">
+                        <h3>Kesar Milk</h3>
+                        <p>$6.25</p>
                     </div>
                 </div>
             </div>    
@@ -80,6 +100,16 @@
                         <h3>Noodles</h3>
                         <p>$7.49</p>
                     </div>
+                    <div class="item">
+                        <img src="brownie.jpg" alt="brownie">
+                        <h3>Brownie</h3>
+                        <p>$3.50</p>
+                    </div>
+                    <div class="item">
+                        <img src="keser.jpg" alt="keser">
+                        <h3>Kesar Milk</h3>
+                        <p>$6.25</p>
+                    </div>
                 </div>
             </div>    
         </section> 
@@ -101,6 +131,16 @@
                         <img src="noodle.jpg" alt="noodle">
                         <h3>Noodles</h3>
                         <p>$7.49</p>
+                    </div>
+                    <div class="item">
+                        <img src="brownie.jpg" alt="brownie">
+                        <h3>Brownie</h3>
+                        <p>$3.50</p>
+                    </div>
+                    <div class="item">
+                        <img src="keser.jpg" alt="keser">
+                        <h3>Kesar Milk</h3>
+                        <p>$6.25</p>
                     </div>
                 </div>
             </div>    
