--- a/menu.html
+++ b/menu.html
@@ -16,34 +16,37 @@
             <a href="#offer">Offers</a>
             <a href="gallery.html">Gallery</a>
         </div>
-    </nav>    
+    </nav>  
+    <div class="banner" style="background-image: url('banner2.jpg');"> 
+        <h4>Our Menus</h4>
+    </div> 
         <section id="offer">
             <div class="special">
                 <h1>Appetizers</h1>
                 <div class="image">
                     <div class="item">
-                        <img src="burger.jpg" alt="burger">
-                        <h3>Burger</h3>
+                        <img src="appetizer1.jpg" alt="Garlic Bread">
+                        <h3>Garlic Bread</h3>
                         <p>$5.99</p>
                     </div>
                     <div class="item">
-                        <img src="dosa.jpg" alt="dosa">
-                        <h3>Dosa</h3>
+                        <img src="appetizer2.jpg" alt="Fried Calamari">
+                        <h3>Fried Calamari</h3>
                         <p>$4.99</p>
                     </div>
                     <div class="item">
-                        <img src="noodle.jpg" alt="noodle">
-                        <h3>Noodles</h3>
+                        <img src="appetizer3.jpg" alt="Nachos Supreme">
+                        <h3>Nachos Supreme</h3>
                         <p>$7.49</p>
                     </div>
                     <div class="item">
-                        <img src="brownie.jpg" alt="brownie">
-                        <h3>Brownie</h3>
+                        <img src="appetizer4.jpg" alt="Spring Roll">
+                        <h3>Spring Roll</h3>
                         <p>$3.50</p>
                     </div>
                     <div class="item">
-                        <img src="keser.jpg" alt="keser">
-                        <h3>Kesar Milk</h3>
+                        <img src="appetizer5.jpg" alt="Mozzarella Sticks">
+                        <h3>Mozzarella Sticks</h3>
                         <p>$6.25</p>
                     </div>
                 </div>
