--- a/menu.html
+++ b/menu.html
@@ -17,8 +17,9 @@
             <a href="gallery.html">Gallery</a>
         </div>
     </nav>  
-    <div class="banner" style="background-image: url('banner2.jpg');"> 
+    <div class="banner1" style="background-image: url('banner2.jpg');"> 
         <h4>Our Menus</h4>
+        <p>SEE WHAT'S NEW TODAY</p>
     </div> 
         <section id="offer">
             <div class="special">
