--- a/menu.html
+++ b/menu.html
@@ -58,28 +58,28 @@
                 <h1>Main Course</h1>
                 <div class="image">
                     <div class="item">
-                        <img src="burger.jpg" alt="burger">
-                        <h3>Burger</h3>
+                        <img src="maincourse1.jpg" alt="Shahi paneer">
+                        <h3>Shahi paneer</h3>
                         <p>$5.99</p>
                     </div>
                     <div class="item">
-                        <img src="dosa.jpg" alt="dosa">
-                        <h3>Dosa</h3>
+                        <img src="maincouse2.jpg" alt="Butter naan">
+                        <h3>Butter naan</h3>
                         <p>$4.99</p>
                     </div>
                     <div class="item">
-                        <img src="noodle.jpg" alt="noodle">
-                        <h3>Noodles</h3>
+                        <img src="maincourse3.jpg" alt="Plain dal with rice">
+                        <h3>Plain dal with rice</h3>
                         <p>$7.49</p>
                     </div>
                     <div class="item">
-                        <img src="brownie.jpg" alt="brownie">
-                        <h3>Brownie</h3>
+                        <img src="maincourse4.jpg" alt="Masala Dosa">
+                        <h3>Masala Dosa</h3>
                         <p>$3.50</p>
                     </div>
                     <div class="item">
-                        <img src="keser.jpg" alt="keser">
-                        <h3>Kesar Milk</h3>
+                        <img src="maincourse5.jpg" alt="Veg pulao">
+                        <h3>Veg pulao</h3>
                         <p>$6.25</p>
                     </div>
                 </div>
@@ -90,28 +90,28 @@
                 <h1>Deserts</h1>
                 <div class="image">
                     <div class="item">
-                        <img src="burger.jpg" alt="burger">
-                        <h3>Burger</h3>
+                        <img src="desert1.jpg" alt="Cupcake">
+                        <h3>Cupcake</h3>
                         <p>$5.99</p>
                     </div>
                     <div class="item">
-                        <img src="dosa.jpg" alt="dosa">
-                        <h3>Dosa</h3>
+                        <img src="desert2.jpg" alt="Pastery">
+                        <h3>Pastery</h3>
                         <p>$4.99</p>
                     </div>
                     <div class="item">
-                        <img src="noodle.jpg" alt="noodle">
-                        <h3>Noodles</h3>
+                        <img src="desert3.jpg" alt="Strawberry Milk">
+                        <h3>Strawberry Milk</h3>
                         <p>$7.49</p>
                     </div>
                     <div class="item">
-                        <img src="brownie.jpg" alt="brownie">
-                        <h3>Brownie</h3>
+                        <img src="desert4.jpg" alt="Shahi Tukda">
+                        <h3>Shahi Tukda</h3>
                         <p>$3.50</p>
                     </div>
                     <div class="item">
-                        <img src="keser.jpg" alt="keser">
-                        <h3>Kesar Milk</h3>
+                        <img src="desert5.jpg" alt="Gajar ka halwa">
+                        <h3>Gajar ka halwa</h3>
                         <p>$6.25</p>
                     </div>
                 </div>
