--- a/menu.html
+++ b/menu.html
@@ -122,28 +122,28 @@
                 <h1>Beverages</h1>
                 <div class="image">
                     <div class="item">
-                        <img src="burger.jpg" alt="burger">
-                        <h3>Burger</h3>
+                        <img src="beverage1.jpg" alt="Espresso">
+                        <h3>Espresso</h3>
                         <p>$5.99</p>
                     </div>
                     <div class="item">
-                        <img src="dosa.jpg" alt="dosa">
-                        <h3>Dosa</h3>
+                        <img src="beverage2.jpg" alt="Iced Lemon Tea">
+                        <h3>Iced Lemon Tea</h3>
                         <p>$4.99</p>
                     </div>
                     <div class="item">
-                        <img src="noodle.jpg" alt="noodle">
-                        <h3>Noodles</h3>
+                        <img src="beverage3.jpg" alt="Sweet Lassi">
+                        <h3>Sweet Lassi</h3>
                         <p>$7.49</p>
                     </div>
                     <div class="item">
-                        <img src="brownie.jpg" alt="brownie">
-                        <h3>Brownie</h3>
+                        <img src="beverage4.jpg" alt="Virgin Mojito">
+                        <h3>Virgin Mojito</h3>
                         <p>$3.50</p>
                     </div>
                     <div class="item">
-                        <img src="keser.jpg" alt="keser">
-                        <h3>Kesar Milk</h3>
+                        <img src="beverage5.jpg" alt="Orange Juice">
+                        <h3>Orange Juice</h3>
                         <p>$6.25</p>
                     </div>
                 </div>
