--- a/menu.html
+++ b/menu.html
@@ -28,26 +28,31 @@
                     <div class="item">
                         <img src="appetizer1.jpg" alt="Garlic Bread">
                         <h3>Garlic Bread</h3>
+                        <h4>Grilled bread infused with garlic and herbs, served with marinara sauce.</h4>
                         <p>$5.99</p>
                     </div>
                     <div class="item">
                         <img src="appetizer2.jpg" alt="Fried Calamari">
                         <h3>Fried Calamari</h3>
+                        <h4>Lightly breaded calamari rings, fried and served with marinara sauce and lemon wedges.</h4>
                         <p>$4.99</p>
                     </div>
                     <div class="item">
                         <img src="appetizer3.jpg" alt="Nachos Supreme">
                         <h3>Nachos Supreme</h3>
+                        <h4>Crispy nachos loaded with melted cheese, jalapeños, sour cream, salsa, and guacamole.</h4>
                         <p>$7.49</p>
                     </div>
                     <div class="item">
                         <img src="appetizer4.jpg" alt="Spring Roll">
                         <h3>Spring Roll</h3>
+                        <h4>Crispy rolls stuffed with vegetables and served with a tangy dipping sauce.</h4>
                         <p>$3.50</p>
                     </div>
                     <div class="item">
                         <img src="appetizer5.jpg" alt="Mozzarella Sticks">
                         <h3>Mozzarella Sticks</h3>
+                        <h4>Crispy fried mozzarella sticks served with a side of marinara sauce and herbs.</h4>
                         <p>$6.25</p>
                     </div>
                 </div>
@@ -60,26 +65,32 @@
                     <div class="item">
                         <img src="maincourse1.jpg" alt="Shahi paneer">
                         <h3>Shahi paneer</h3>
+                        <h4>Paneer cubes cooked in a rich, creamy cashew and tomato gravy with aromatic spices, 
+                            garnished with fresh cream.</h4>
                         <p>$5.99</p>
                     </div>
                     <div class="item">
                         <img src="maincouse2.jpg" alt="Butter naan">
                         <h3>Butter naan</h3>
+                        <h4>Soft, fluffy Indian flatbread brushed with melted butter, perfect to pair with any curry.</h4>
                         <p>$4.99</p>
                     </div>
                     <div class="item">
                         <img src="maincourse3.jpg" alt="Plain dal with rice">
                         <h3>Plain dal with rice</h3>
+                        <h4>Simple and wholesome yellow lentils served with a side of steamed rice.</h4>
                         <p>$7.49</p>
                     </div>
                     <div class="item">
                         <img src="maincourse4.jpg" alt="Masala Dosa">
                         <h3>Masala Dosa</h3>
+                        <h4>Crispy rice and lentil crepe filled with spiced potato masala, served with coconut chutney and sambar.</h4>
                         <p>$3.50</p>
                     </div>
                     <div class="item">
                         <img src="maincourse5.jpg" alt="Veg pulao">
                         <h3>Veg pulao</h3>
+                        <h4>Fragrant basmati rice cooked with mixed vegetables and aromatic spices, served with raita.</h4>
                         <p>$6.25</p>
                     </div>
                 </div>
@@ -92,26 +103,34 @@
                     <div class="item">
                         <img src="desert1.jpg" alt="Cupcake">
                         <h3>Cupcake</h3>
+                        <h4>A soft and moist vanilla or chocolate cupcake topped with delicious buttercream frosting.</h4>
                         <p>$5.99</p>
                     </div>
                     <div class="item">
-                        <img src="desert2.jpg" alt="Pastery">
-                        <h3>Pastery</h3>
+                        <img src="desert4.jpg" alt="Shahi Tukda">
+                        <h3>Shahi Tukda</h3>
+                        <h4>A royal dessert made with fried bread soaked in saffron-flavored 
+                            syrup and topped with rich rabri (thickened milk) and dry fruits.</h4>
                         <p>$4.99</p>
                     </div>
                     <div class="item">
                         <img src="desert3.jpg" alt="Strawberry Milk">
                         <h3>Strawberry Milk</h3>
+                        <h4>Thick and creamy strawberry milkshake topped with whipped cream.</h4>
                         <p>$7.49</p>
                     </div>
                     <div class="item">
-                        <img src="desert4.jpg" alt="Shahi Tukda">
-                        <h3>Shahi Tukda</h3>
+                        <img src="desert2.jpg" alt="Pastery">
+                        <h3>Pastery</h3>
+                        <h4>Deliciously light and fluffy pastry, 
+                        available in flavors like chocolate, black forest, and pineapple, topped with cream and fruit.</h4>
                         <p>$3.50</p>
                     </div>
                     <div class="item">
                         <img src="desert5.jpg" alt="Gajar ka halwa">
                         <h3>Gajar ka halwa</h3>
+                        <h4>Traditional Indian dessert made from grated carrots cooked with milk, ghee, 
+                            and sugar, topped with nuts and cardamom.</h4>
                         <p>$6.25</p>
                     </div>
                 </div>
@@ -124,26 +143,31 @@
                     <div class="item">
                         <img src="beverage1.jpg" alt="Espresso">
                         <h3>Espresso</h3>
+                        <h4>Strong and rich espresso to kickstart your day.</h4>
                         <p>$5.99</p>
                     </div>
                     <div class="item">
                         <img src="beverage2.jpg" alt="Iced Lemon Tea">
                         <h3>Iced Lemon Tea</h3>
+                        <h4>Chilled tea with a splash of lemon, served over ice.</h4>
                         <p>$4.99</p>
                     </div>
                     <div class="item">
                         <img src="beverage3.jpg" alt="Sweet Lassi">
                         <h3>Sweet Lassi</h3>
+                        <h4>Chilled yogurt drink, slightly sweetened for a refreshing taste.</h4>
                         <p>$7.49</p>
                     </div>
                     <div class="item">
                         <img src="beverage4.jpg" alt="Virgin Mojito">
                         <h3>Virgin Mojito</h3>
+                        <h4>A refreshing mix of mint, lime, and soda, served over ice.</h4>
                         <p>$3.50</p>
                     </div>
                     <div class="item">
                         <img src="beverage5.jpg" alt="Orange Juice">
                         <h3>Orange Juice</h3>
+                        <h4>Freshly squeezed orange juice, served chilled.</h4>
                         <p>$6.25</p>
                     </div>
                 </div>
