--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <h2> HAVE A <strong> DELICIOUS</strong> MEAL WITH US. </h2>
             <h5>Welcome to Spice, where every meal is a celebration of flavors! Nestled in the heart of the city,<br>
              we bring together a vibrant fusion of traditional spices and modern culinary techniques to <br> create unforgettable dining experiences.</h5>
-            <button class="search-btn">View Our Menu</button>
-            <button class="search-btn">Book a Table</button>
+             <a href="menu.html">View our menu</a>
+             <a href="Reservation.html">Book a Table</a>
             </div>    
     </header>   
 
@@ -40,7 +40,7 @@
                     <br>
                     Come savor the magic of spices with us!
                 </h4>
-                <button class="search-btn">Read more</button>
+                <a href="gallery.html">Read more</a>
             </div>
     </section>
 
