--- a/gallery.html
+++ b/gallery.html
@@ -17,5 +17,59 @@
             <a href="gallery.html">Gallery</a>
         </div>
     </nav>
+
+    <div class="gallery">
+        <h1>Our Gallery</h1>
+        <div class="gallery-item">
+            <img src="resturantinterior.jpg" alt="Restaurant Interiors" class="interior-image">
+            <p>Restaurant Interiors</p>
+        </div>
+
+        <div class="gallery">
+            <h1>Our Chefs</h1>
+            <div class="chefimages">
+                <div class="chefitems">
+                    <img src="chef1.jpg" alt="Chef Rajeev Kumar" class="chef-photo">
+                    <h3>Chef Rajeev Kumar</h3>
+                    <p>
+                        Chef Rajeev brings over 15 years of culinary experience to Spice Restaurant. His passion for creating
+                        innovative dishes and his deep understanding of spices make every dish a delight. Trained in traditional
+                        Indian cuisine, he masterfully blends flavors from around the world to create a unique dining experience.
+                        Under his leadership, our kitchen continues to serve the finest, flavorful dishes with a touch of authenticity.
+                    </p>
+                </div>
+                <div class="chefitems">
+                    <img src="chef2.jpg" alt="Chef Akash Verma" class="chef-photo">
+                    <h3>Chef Akash Verma</h3>
+                    <p>
+                        Chef Akash brings over 18 years of culinary experience to Spice Restaurant. His passion for creating
+                        innovative dishes and his deep understanding of spices make every dish a delight. Trained in traditional
+                        Indian cuisine, he masterfully blends flavors from around the world to create a unique dining experience.
+                        Under his leadership, our kitchen continues to serve the finest, flavorful dishes with a touch of authenticity.
+                    </p>
+                </div>
+                <div class="chefitems">
+                    <img src="chef3.jpg" alt="Chef Neha Gupta" class="chef-photo">
+                    <h3>Chef Neha Gupta</h3>
+                    <p>
+                        Chef Neha Gupta brings over 10 years of culinary experience to Spice Restaurant. Her passion for creating
+                        innovative dishes and her deep understanding of spices make every dish a delight. Trained in traditional
+                        Indian cuisine, she masterfully blends flavors from around the world to create a unique dining experience.
+                        Under her leadership, our kitchen continues to serve the finest, flavorful dishes with a touch of authenticity.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="gallery-item">
+            <h1>Happy Customers</h1>
+            <div class="customer-images">
+                <img src="costumer1.jpg" alt="Happy Customer 1" class="customer-photo">
+                <img src="costumer2.jpg" alt="Happy Customer 2" class="customer-photo">
+            </div>
+            <h2>We love to see our customers happy and enjoying their meals!</h2>
+        </div>
+
+    </div>
 </body>
 </html>
