--- a/gallery.html
+++ b/gallery.html
@@ -69,7 +69,10 @@
             </div>
             <h2>We love to see our customers happy and enjoying their meals!</h2>
         </div>
-
     </div>
+    <section id="footer">
+        <h4>copyright © 2024 Spice</h4>
+        <p>All rights reserved </p>
+    </section>
 </body>
 </html>
