--- a/menu.html
+++ b/menu.html
@@ -173,6 +173,9 @@
                 </div>
             </div>    
         </section> 
-   
+        <section id="footer">
+            <h4>copyright © 2024 Spice</h4>
+            <p>All rights reserved </p>
+        </section>    
 </body>
 </html>
