--- a/gallery.html
+++ b/gallery.html
@@ -20,8 +20,8 @@
 
     <div class="gallery">
         <h1>Our Gallery</h1>
-        <div class="gallery-item">
-            <img src="resturantinterior.jpg" alt="Restaurant Interiors" class="interior-image">
+        <div class="galleryitem">
+            <img src="resturantinterior.jpg" alt="Restaurant Interiors" class="interiorimage">
             <p>Restaurant Interiors</p>
         </div>
 
@@ -61,11 +61,11 @@
             </div>
         </div>
 
-        <div class="gallery-item">
+        <div class="galleryitem">
             <h1>Happy Customers</h1>
-            <div class="customer-images">
-                <img src="costumer1.jpg" alt="Happy Customer 1" class="customer-photo">
-                <img src="costumer2.jpg" alt="Happy Customer 2" class="customer-photo">
+            <div class="customerimages">
+                <img src="costumer1.jpg" alt="Happy Customer 1" class="customerphoto">
+                <img src="costumer2.jpg" alt="Happy Customer 2" class="customerphoto">
             </div>
             <h2>We love to see our customers happy and enjoying their meals!</h2>
         </div>
