--- a/Reservation.html
+++ b/Reservation.html
@@ -25,38 +25,38 @@
         <h1>Make a Reservation</h1>
         <form class="reservationform">
             <div class="form">
-                <label for="name">Your Name</label>
+                <label>Your Name</label>
                 <input type="text" name="name" placeholder="Enter your name" required>
             </div>
 
             <div class="form">
-                <label for="email">Email Address</label>
+                <label >Email Address</label>
                 <input type="email" name="email" placeholder="Enter your email" required>
             </div>
 
             <div class="form">
-                <label for="phone">Phone Number</label>
+                <label >Phone Number</label>
                 <input type="tel" name="phone" placeholder="Enter your phone number" required>
             </div>
 
             <div class="form">
-                <label for="guests">Number of Guests</label>
+                <label >Number of Guests</label>
                 <input type="number" name="guests" required>
             </div>
-
+            
             <div class="form">
-                <label for="date">Reservation Date</label>
+                <label>Reservation Date</label>
                 <input type="date" name="date" required>
             </div>
 
             <div class="form">
-                <label for="time">Reservation Time</label>
+                <label >Reservation Time</label>
                 <input type="time" name="time" required>
             </div>
 
             <div class="form">
-                <label for="seats">Available Seats</label>
-                <select id="seats" name="seats">
+                <label >Available Seats</label>
+                <select name="seats">
                     <option value="Indoor">Indoor Seating</option>
                     <option value="Outdoor">Outdoor Seating</option>
                     <option value="VIP">VIP Seating</option>
