--- a/Reservation.html
+++ b/Reservation.html
@@ -72,19 +72,19 @@
     <section class="availableseats">
         <h1>Available Seats</h1>
         <div class="seats">
-            <div class="seat" id="table1">
+            <div class="seat">
                 <h1>Table 1 - Indoor</h1>
                 <p>Status: Available</p>
             </div>
-            <div class="seat" id="table2">
+            <div class="seat">
                 <h1>Table 2 - Outdoor</h1>
                 <p>Status: Reserved</p>
             </div>
-            <div class="seat" id="table3">
+            <div class="seat">
                 <h1>Table 3 - VIP</h1>
                 <p>Status: Available</p>
             </div>
-            <div class="seat" id="table4">
+            <div class="seat">
                 <h1>Table 4 - VVIP</h1>
                 <p>Status: Available</p>
             </div>
