--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </section>   
     <section class="events">
         <h1>Upcoming Events</h1>
-        <div class="event-list">
+        <div class="eventlist">
             <div class="event">
                 <h3>Live Music Night</h3>
                 <p>Join us for an evening of live music and great food. Enjoy a relaxing night with performances from local artists.</p>
