--- a/menu.html
+++ b/menu.html
@@ -98,7 +98,7 @@
         </section> 
         <section id="offer">
             <div class="special">
-                <h1>Deserts</h1>
+                <h1>Desserts</h1>
                 <div class="image">
                     <div class="item">
                         <img src="desert1.jpg" alt="Cupcake">
