--- a/index.html
+++ b/index.html
@@ -18,14 +18,17 @@
                 <a href="gallery.html">Gallery</a>
             </div>
         </nav>
-            <div class="banner" style="background-image: url('meal.png');">
+        <div class="banner" style="background-image: url('meal.png');">
             <h4>Welcome to Spice Restaurant</h4><br>
             <h2> HAVE A <strong> DELICIOUS</strong> MEAL WITH US. </h2>
             <h5>Welcome to Spice, where every meal is a celebration of flavors! Nestled in the heart of the city,<br>
              we bring together a vibrant fusion of traditional spices and modern culinary techniques to <br> create unforgettable dining experiences.</h5>
-             <a href="menu.html">View our menu</a>
-             <a href="Reservation.html">Book a Table</a>
-            </div>    
+            <div class="btn">
+                <a href="menu.html" class="btn1">View our menu</a>
+                <a href="Reservation.html" class="btn2">Book a Table</a>
+            </div>
+        </div>
+
     </header>   
 
     <section class="section1">
