banner dimension change

--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
     <div class="gallery">
         <h1>Our Gallery</h1>
         <div class="galleryitem">
-            <img src="resturantinterior.jpg" alt="Restaurant Interiors" class="interiorimage">
+            <img src="interior2.jpg" alt="Restaurant Interiors" class="interiorimage">
             <p>Restaurant Interiors</p>
         </div>
 
