--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section class="section1">
             <div class="pasta">
-                <img src="pasta.jpg" alt="pasta dish" >
+                <img src="pasta2.jpg" alt="pasta dish" >
             </div>
             <div class="text">
                 <h2>Discover your favorite food within our restaurant</h2>
